# WFLOP_meta_learning

./: .gitignore  README.md  pipeline.py  pyproject.toml
components/: __init__.py  build_indices_dict.py  figure_builder.py  merit_table_builder.py  models_and_merit_builder.py  regression_metrics.py
params_model/: epsilon.json  hipervolume.json  igd.json
result/igd/: merit_igd.csv
result/igd/features_importance/: l100_r0.05_features_importance.csv  l100_r0.1_features_importance.csv  l100_r0.25_features_importance.csv  l100_r0.5_features_importance.csv  l100_r1.0_features_importance.csv  l10_r0.05_features_importance.csv  l10_r0.1_features_importance.csv  l10_r0.25_features_importance.csv  l10_r0.5_features_importance.csv  l10_r1.0_features_importance.csv  l25_r0.05_features_importance.csv  l25_r0.1_features_importance.csv  l25_r0.25_features_importance.csv  l25_r0.5_features_importance.csv  l25_r1.0_features_importance.csv  l50_r0.05_features_importance.csv  l50_r0.1_features_importance.csv  l50_r0.25_features_importance.csv  l50_r0.5_features_importance.csv  l50_r1.0_features_importance.csv  l5_r0.05_features_importance.csv  l5_r0.1_features_importance.csv  l5_r0.25_features_importance.csv  l5_r0.5_features_importance.csv  l5_r1.0_features_importance.csv  r0.05_features_importance.csv  r0.1_features_importance.csv  r0.25_features_importance.csv  r0.5_features_importance.csv  (+1 more)
utils/: __init__.py
utils/ParamsSearch/: __init__.py  params_search_main.py
utils/build_datasets/: __init__.py  build_pareto_adaptive.py  build_pareto_random.py
(+191 files in other folders)
